## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.7 2007-01-29 11:35:37 flux Exp $

exampledir = $(datadir)/doc/$(PACKAGE)/examples

example_DATA = falkner.mci falkner2.mci falkner.coords make-falkner.pl \
   proteins.mci matula.mci lattice.mci honey.mci seven.mci infinity.mci \
   friends small.mci small.map small.tab fznyy.tab fznyy.mci small64.mci \
	petersen.mci \
   tiny-min.mci tiny-nil.mci tiny-nilnine.mci tiny-ninenil.mci tiny-one.mci tiny-zero.mci \
	T Tx Ty Txy \
   rcltiny.cls1 rcltiny.cls2 rcltiny.cls3 rcltiny.mci rcltiny.tab

EXTRA_DIST = $(example_DATA)

