## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.3 2007-04-19 16:06:12 flux Exp $

include $(top_srcdir)/include/include.am

this = 

noinst_SCRIPTS = 

dist_bin_SCRIPTS = rcl.sh rcl-qc.sh rcl-select.pl rcldo.pl rcl-dot-resmap.pl rcl-qm.R

EXTRA_DIST = $(this) $(noinst_SCRIPTS)


