## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.3 2007-04-19 16:06:12 flux Exp $

include $(top_srcdir)/include/include.am

this = 

noinst_SCRIPTS = 

dist_bin_SCRIPTS = rcl rcl-qc rcl-select.pl rcldo.pl rcl-dot-resmap.pl rcl-qm.R rcl-relevel.pl

EXTRA_DIST = $(this) $(noinst_SCRIPTS)


