## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.3 2007-04-19 16:06:12 flux Exp $

include $(top_srcdir)/include/include.am

this = minimcl docme mcxplotlines.R clsdiam.sh srt2cls.sh srt2tab.sh

noinst_SCRIPTS = packed-example.sh packed-example2.sh

dist_bin_SCRIPTS = clxdo rcl-res.pl rcl.sh

EXTRA_DIST = $(this) $(noinst_SCRIPTS)


